Fix button on ios.

--- a/_sass/smacss/components/_mc_signup.sass
+++ b/_sass/smacss/components/_mc_signup.sass
@@ -70,6 +70,7 @@
 
 
     input[type="submit"]
+        -webkit-appearance: none
         background: $brand-primary
         color: #fff
         border: 1px solid $brand-primary
